--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="javascript.js"></script>
-    <title>Document</title>
+    <title>My Website</title>
 </head>
 <body>
-    <h1>Anthony Garcia</h1>
+    <header>
+       <h1>Anthony Garcia</h1>
+       <nav>
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./Portfolio.html">Portfolio</a>
+       </nav>
+    </header>
+    <div>
+        <img src="https://i.pinimg.com/originals/4e/9f/86/4e9f86a16eb6da92642dbdb0eafd12ad.jpg" width="150" height="200">
+        <article>
+            <h3>Mission Statement</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi. </p>
+        <h3>In spirational quote</h3>
+        </article>
+    </div>
 </body>
 </html>
