--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
          <a href="./Portfolio.html">Portfolio</a>
         </nav>
      </header>
-     <div>
+     <article>
         <h3>When Im not knee deep in Web Development, Im doing the following things</h3>
         <h4>Spending time with my family</h4>
           <img src="https://i.pinimg.com/474x/57/8b/dd/578bdd879ae858f46c6bc539ad03f5e4.jpg" width="200" height="175">
@@ -26,7 +26,10 @@
         <h4>Making Beats</h4>
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_HEIDsL6KlNIwVMxxIqDaVl6NKc02_7Be2Q&usqp=CAU" width="200" height="125">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi.</p>
-    </div>
+     </articlev>
+     <div class="footerContainer">
+      <footer class="fixedFooter"> Follow me on social media</footer>
+      </div>
     
 </body>
 </html>
