--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
          <a href="./Portfolio.html">Portfolio</a>
         </nav>
      </header>
-    <div>
+    <article>
         <h3>Things I've made</h3>
         <h4>Projet A</h4>
         <img src="https://cdn-icons-png.flaticon.com/512/6819/6819339.png" width="175" height="175">
@@ -30,6 +30,9 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi.</p>      
 
-    </div>
+        </article>
+        <div class="footerContainer">
+            <footer class="fixedFooter"> Follow me on social media</footer>
+            </div>
 </body>
 </html>
