--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>My Website</title>
 </head>
 <body>
+    <div>
     <header>
        <h1>Anthony Garcia</h1>
        <nav>
@@ -16,13 +17,18 @@
         <a href="./Portfolio.html">Portfolio</a>
        </nav>
     </header>
-    <div>
+    <article>
         <img src="https://i.pinimg.com/originals/4e/9f/86/4e9f86a16eb6da92642dbdb0eafd12ad.jpg" width="150" height="200">
+        
         <article>
             <h3>Mission Statement</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi. </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi.</p>
         <h3>In spirational quote</h3>
         </article>
-    </div>
+    </article>
+</div>
+<div class="footerContainer">
+<footer class="fixedFooter"> Follow me on social media</footer>
+</div>
 </body>
 </html>
