--- a/about.html
+++ b/about.html
@@ -16,17 +16,29 @@
         </nav>
      </header>
      <article>
-        <h3>When Im not knee deep in Web Development, Im doing the following things</h3>
-        <h4>Spending time with my family</h4>
-          <img src="https://i.pinimg.com/474x/57/8b/dd/578bdd879ae858f46c6bc539ad03f5e4.jpg" width="200" height="175">
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi. </p>
-        <h4>Practice Yoga</h4>
-          <img src="https://www.mindomo.com/doc.htm?d=50df6fe517374d668e7a5ea328c09c20&m=3ecbc6dd015542cca2b1f6a6be391250" width="175" height="125">
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi. </p>
-        <h4>Making Beats</h4>
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_HEIDsL6KlNIwVMxxIqDaVl6NKc02_7Be2Q&usqp=CAU" width="200" height="125">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi.</p>
-     </articlev>
+        <h4>When Im not knee deep in Web Development, Im doing the following things</h4>
+        <div class="section">
+            <div class="text">
+        <h3>Spending time with my family</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi. </p>
+            </div>
+            <img src="https://i.pinimg.com/474x/57/8b/dd/578bdd879ae858f46c6bc539ad03f5e4.jpg" width="200" height="175">
+        </div>
+        <div class="section">
+            <div class="text">
+        <h3>Practice Yoga</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi. </p>
+            </div>
+            <img src="https://www.mindomo.com/doc.htm?d=50df6fe517374d668e7a5ea328c09c20&m=3ecbc6dd015542cca2b1f6a6be391250" width="175" height="125">
+        </div>
+        <div class="section"> 
+            <div class="text">  
+        <h3>Making Beats</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi.</p>
+            </div>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_HEIDsL6KlNIwVMxxIqDaVl6NKc02_7Be2Q&usqp=CAU" width="200" height="125">
+        </div> 
+            </article>
      <div class="footerContainer">
       <footer class="fixedFooter"> Follow me on social media</footer>
       </div>
