--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="javascript.js"></script>
     <title>My Website</title>
+  
 </head>
 <body>
     <div>
@@ -18,14 +19,15 @@
        </nav>
     </header>
     <article>
-        <img src="https://i.pinimg.com/originals/4e/9f/86/4e9f86a16eb6da92642dbdb0eafd12ad.jpg" width="150" height="200">
-        
-        <article>
+        <div class="section">
+            <div class="text">
             <h3>Mission Statement</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi.</p>
+            </div>
+        <img class="img_shag" src="https://i.pinimg.com/originals/4e/9f/86/4e9f86a16eb6da92642dbdb0eafd12ad.jpg" width="150" height="200">
+        </div>
         <h3>In spirational quote</h3>
-        </article>
-    </article>
+        
 </div>
 <div class="footerContainer">
 <footer class="fixedFooter"> Follow me on social media</footer>
