--- a/portfolio.html
+++ b/portfolio.html
@@ -16,20 +16,31 @@
         </nav>
      </header>
     <article>
-        <h3>Things I've made</h3>
-        <h4>Projet A</h4>
-        <img src="https://cdn-icons-png.flaticon.com/512/6819/6819339.png" width="175" height="175">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi.</p>
-        <h4>Project B</h4>
-        <img src="https://yt3.googleusercontent.com/Nd1GFdsACbm96qOOK7Fpp4mnPSDXdF4vjX-t8n--ZGAD-aELtsUKnwYLD8ZnW4AlVJ4X8othP3Y=s900-c-k-c0x00ffffff-no-rj" width="175" height="175">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi.</p>
-        <h4>Project C</h4> 
-        <img src="https://png.pngtree.com/png-vector/20210222/ourlarge/pngtree-glitch-distorted-letter-c-broken-pixel-effect-png-image_2936127.jpg" width="175" height="175"> 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi.</p>      
-
+        <h4>Things I've made</h4>
+        <div class="section">
+            <div class="text">
+          <h3>Projet A</h3>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi.</p>
+            </div>
+          <img src="https://cdn-icons-png.flaticon.com/512/6819/6819339.png" width="175" height="175">
+        </div>
+        <div class="section">
+            <div class="text">
+          <h3>Project B</h3>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi.</p> 
+            </div>
+          <img src="https://yt3.googleusercontent.com/Nd1GFdsACbm96qOOK7Fpp4mnPSDXdF4vjX-t8n--ZGAD-aELtsUKnwYLD8ZnW4AlVJ4X8othP3Y=s900-c-k-c0x00ffffff-no-rj" width="175" height="175">
+        </div>
+        <div class="section">
+            <div class="text">
+           <h3>Project C</h3> 
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Nisi vitae suscipit tellus mauris a diam. Est placerat in egestas erat imperdiet sed euismod nisi.</p>      
+            </div>
+          <img src="https://png.pngtree.com/png-vector/20210222/ourlarge/pngtree-glitch-distorted-letter-c-broken-pixel-effect-png-image_2936127.jpg" width="175" height="175"> 
+        </div>
         </article>
         <div class="footerContainer">
             <footer class="fixedFooter"> Follow me on social media</footer>
