--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
         <a href="./Portfolio.html">Portfolio</a>
+        <a href="./contact.html">Contact</a>
        </nav>
     </header>
     <article>
@@ -30,7 +31,12 @@
         
 </div>
 <div class="footerContainer">
-<footer class="fixedFooter"> Follow me on social media</footer>
+<footer class="fixedFooter"> 
+    Follow me on social media
+    <img src="https://image.similarpng.com/very-thumbnail/2021/01/Black-linkedin-logo-design-on-transparent-background-PNG.png"height="20" width="20">
+    <img src="https://thumbs.dreamstime.com/b/instagram-logo-insta-realistic-social-media-icon-logotype-transparent-background-272879825.jpg" height="20" width="20">
+    <img src="https://freepnglogo.com/images/all_img/1691751275tiktok-logo-png-black-and-white.png"height="20" width="20">
+</footer>
 </div>
 </body>
 </html>
